criacao crud services, sem testes
